Фиксированный хедер и хедер для авторизованного пользователя

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="fixed">
             <div class="container">
                 <div class="header-box box">
                     <div class="logo">
@@ -14,12 +14,12 @@
                     </div>
                     <nav class="menu">
                         <ul class="menu-list">
-                            <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a></li>
+                            <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
                             <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                         </ul>
                     </nav>
                     <div class="search">
-                    	<span class="search-toggle"></span>
+                        <span class="search-toggle"></span>
                         <form role="search" method="get" action="#" class="search-form">
                             <input class="search-field" type="search" name="s" placeholder="Поиск вакансий, курсов и стажировок">
                             <button class="search-btn" type="submit">Найти</button>
@@ -37,13 +37,13 @@
                     </div>
 
                     <div class="mobile-menu">
-                    	<span id="toggle-menu" class="toggle-menu"></span>
+                        <span id="toggle-menu" class="toggle-menu"></span>
                         <ul class="mobile-menu-list">
                             <li class="mobile-menu-item">
-                            	<a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
                             </li>
                             <li class="mobile-menu-item">
-                            	<a href="#" class="mobile-menu-link">Контакты</a>
+                                <a href="#" class="mobile-menu-link">Контакты</a>
                             </li>
                             <li class="mobile-menu-item mobile-menu-item--divider">
                                 <a href="#loginForm" class="mobile-menu-link btn-modal">Войти</a>
