--- a/src/vacancy-single.html
+++ b/src/vacancy-single.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="wrapper">
-            <header>
+            <header class="fixed">
                 <div class="container">
                     <div class="header-box box">
                         <div class="logo">
