--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -7,15 +7,15 @@
 
     <body>
         <div class="wrapper">
-            <header>
-                <div class="container">
+            <header class="fixed lk-header">
+                <div class="container-full">
                     <div class="header-box box">
                         <div class="logo">
                             <a href="/" class="logo-link"><span>Go</span>Study</a>
                         </div>
                         <nav class="menu">
                             <ul class="menu-list">
-                                <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
+                                <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a></li>
                                 <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
@@ -26,33 +26,111 @@
                                 <button class="search-btn" type="submit">Найти</button>
                             </form>
                         </div>
-                        <div class="header-links">
-                            <ul class="header-links-list">
-                                <li class="header-links-item">
-                                    <a href="#loginForm" class="header-links-login btn-modal">Войти</a>
-                                </li>
-                                <li class="header-links-item">
-                                    <a href="#registrationForm" class="header-links-registration btn-modal">Регистрация</a>
-                                </li>
-                            </ul>
+                        <div class="header-meta box">
+                            <div class="dropdown-menu dropdown-menu--notification dropdown-menu--new">
+                                <p class="dropdown-menu-title">Уведомления</p>
+                                <ul class="dropdown-menu-list">
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="dropdown-menu dropdown-menu--message dropdown-menu--new">
+                                <p class="dropdown-menu-title">Сообщения</p>
+                                <ul class="dropdown-menu-list">
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
+                                    </li>
+                                </ul>
+                            </div>
+
+                            <div class="dropdown-menu dropdown-menu--profile">
+                                <p class="dropdown-menu-title">
+                                    <img src="img/avatar.svg" class="dropdown-menu-avatar" alt="">
+                                </p>
+                                <ul class="dropdown-menu-list">
+                                    <li class="dropdown-menu-item">
+                                        <a href="lk-profile.html" class="dropdown-menu-link">Профиль</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="lk-vacancy.html" class="dropdown-menu-link">Вакансии</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="lk-resume.html" class="dropdown-menu-link">Резюме</a>
+                                    </li>
+                                    <li class="dropdown-menu-item">
+                                        <a href="#" class="dropdown-menu-link">Курсы</a>
+                                    </li>
+                                    <li class="dropdown-menu-item dropdown-menu-item--logout">
+                                        <a href="#" class="dropdown-menu-link">Выйти</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
                         <div class="mobile-menu">
                             <span id="toggle-menu" class="toggle-menu"></span>
-                            <ul class="mobile-menu-list">
-                                <li class="mobile-menu-item">
-                                    <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
-                                </li>
-                                <li class="mobile-menu-item">
-                                    <a href="#" class="mobile-menu-link">Контакты</a>
-                                </li>
-                                <li class="mobile-menu-item mobile-menu-item--divider">
-                                    <a href="#loginForm" class="mobile-menu-link btn-modal">Войти</a>
-                                </li>
-                                <li class="mobile-menu-item">
-                                    <a href="#registrationForm" class="mobile-menu-link btn-modal">Регистрация</a>
-                                </li>
-                            </ul>
+                            <div class="mobile-menu-list">
+                                <div class="mobile-menu-profile">
+                                    <div class="mobile-menu-avatar">
+                                        <img src="img/avatar.svg" alt="Константин Константинопольский">
+                                    </div>
+                                    <div class="mobile-menu-user">
+                                        <p class="mobile-menu-name">Константин Константинопольский</p>
+                                        <p class="mobile-menu-email">konstantink@gmail.com</p>
+                                    </div>
+                                </div>
+                                <ul class="mobile-menu-profile-list">
+                                    <li class="mobile-menu-item mobile-menu-item--active">
+                                        <a href="lk-profile.html" class="mobile-menu-link">Профиль</a>
+                                    </li>
+                                    <li class="mobile-menu-item">
+                                        <a href="lk-vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                    </li>
+                                    <li class="mobile-menu-item">
+                                        <a href="lk-resume.html" class="mobile-menu-link">Резюме</a>
+                                    </li>
+                                    <li class="mobile-menu-item">
+                                        <a href="#" class="mobile-menu-link">Курсы</a>
+                                    </li>
+                                </ul>
+                                <ul class="mobile-menu-lk">
+                                    <li class="mobile-menu-item">
+                                        <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                    </li>
+                                    <li class="mobile-menu-item">
+                                        <a href="#" class="mobile-menu-link">Контакты</a>
+                                    </li>
+                                    <li class="mobile-menu-item mobile-menu-item--logout">
+                                        <a href="#" class="mobile-menu-link">Выйти</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
