плашка cookies и отступ от фикс.хедера на мобилках

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -1,4 +1,13 @@
-<footer>
+<footer id="footer">
+	<div id="fixed-box" class="cookies-block">
+		<div class="container-full box box-between">
+			<div class="cookies-block-desc">
+				<p>Продолжая работу с сайтом gostudy.ru, вы подтверждаете использование сайтом cookies вашего браузера с целью улучшить предложения и сервис на основе ваших предпочтений и интересов. <a href="https://ru.wikipedia.org/wiki/Cookie">Подробнее</a></p>
+			</div>
+
+			<button type="button" class="cookies-block-dismiss">Закрыть</button>
+		</div>
+	</div>
 	<div class="container">
 		<div class="footer-box box">
 			<div class="footer-column">
