Базовые стили, формы, меню

--- a/src/vacancy-single.html
+++ b/src/vacancy-single.html
@@ -104,7 +104,7 @@
 
                         <div class="box-footer box">
                             <div class="vacancy-action">
-                                <a href="#" class="btn btn--light-blue vacancy-action-link">Откликнуться</a>
+                                <button class="btn btn--light-blue vacancy-action-link">Откликнуться</button>
                             </div>
                             <div class="vacancy-favorite">
                                 <button class="card-favorite-link">В избранное</button>
