--- a/src/html/_form.html
+++ b/src/html/_form.html
@@ -21,10 +21,16 @@
 
         <fieldset>
             <p>или через E-mail</p>
-            <input id="email" name="email" type="email" placeholder="E-mail" required="">
-            <input id="password" name="password" type="password" placeholder="Пароль" required="">
+            <label>
+                <input id="email" name="email" type="email" placeholder="E-mail" required="" class="error-field">
+                <span class="error-field-text">Ошибка. Проверьте правильность заполнения.</span>
+            </label>
+
+            <label>
+                <input id="password" name="password" type="password" placeholder="Пароль" required="">
+            </label>
             <a href="#" class="form-link">Забыли пароль?</a>
-            <input type="submit" value="Войти">
+            <input type="submit" value="Войти" class="btn-full">
 
             <label class="input-checkbox">
                 <input type="checkbox" checked>
@@ -67,7 +73,7 @@
             <input id="surname" name="surname" type="text" placeholder="Фамилия" required="">
             <input id="email" name="email" type="email" placeholder="E-mail" required="">
             <input id="password" name="password" type="password" placeholder="Пароль" required="">
-            <input type="submit" value="Зарегистрироваться">
+            <input type="submit" value="Зарегистрироваться" class="btn-full">
         </fieldset>
 
         <div class="form-footer box">
