--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,19 @@
                     </div>
                     <nav class="menu">
                         <ul class="menu-list">
-                            <li class="menu-item"><a href="vacancy.html" class="menu-link menu-link--active">Вакансии</a></li>
+                            <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a>
+								<ul class="menu-list-child">
+									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a>
+										<ul class="menu-list-sub">
+											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+										</ul>
+									</li>
+									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+								</ul>
+                            </li>
                             <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -645,7 +657,6 @@
 		        </div>
         	</div>
         </section>
-
 
         //= html/_footer.html
         //= html/_form.html
