Сайдбар и вложенное меню. Отклик на вакансию, хлебные крошки

--- a/src/lk-vacancy.html
+++ b/src/lk-vacancy.html
@@ -27,46 +27,79 @@
                             </form>
                         </div>
                         <div class="header-meta box">
-                            <div class="dropdown-menu dropdown-menu--notification">
+                            <div class="dropdown-menu dropdown-menu--wide dropdown-menu--notification">
                                 <p class="dropdown-menu-title">Уведомления</p>
-                                <ul class="dropdown-menu-list">
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                </ul>
+                                <div class="dropdown-menu-list">
+                                    <div class="dropdown-menu-head box box-between">
+                                        <p>Уведомления</p>
+                                        <a href="#">Посмотреть все</a>
+                                    </div>
+                                    <ul class="dropdown-menu-body">
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
-                            <div class="dropdown-menu dropdown-menu--message">
+                            <div class="dropdown-menu dropdown-menu--wide dropdown-menu--message">
                                 <p class="dropdown-menu-title">Сообщения</p>
-                                <ul class="dropdown-menu-list">
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                </ul>
+                                <div class="dropdown-menu-list">
+                                    <div class="dropdown-menu-head box box-between">
+                                        <p>Сообщения</p>
+                                        <a href="#">Посмотреть все</a>
+                                    </div>
+                                    <ul class="dropdown-menu-body">
+                                        <li class="dropdown-menu-item">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
                             <div class="dropdown-menu dropdown-menu--profile">
@@ -78,10 +111,10 @@
                                         <a href="lk-profile.html" class="dropdown-menu-link">Профиль</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="lk-vacancy.html" class="dropdown-menu-link">Вакансии</a>
+                                        <a href="lk-vacancy.html" class="dropdown-menu-link">Мои вакансии</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="lk-resume.html" class="dropdown-menu-link">Резюме</a>
+                                        <a href="lk-resume.html" class="dropdown-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="dropdown-menu-item">
                                         <a href="#" class="dropdown-menu-link">Курсы</a>
@@ -110,10 +143,10 @@
                                         <a href="lk-profile.html" class="mobile-menu-link">Профиль</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="lk-vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                        <a href="lk-vacancy.html" class="mobile-menu-link">Мои вакансии</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="lk-resume.html" class="mobile-menu-link">Резюме</a>
+                                        <a href="lk-resume.html" class="mobile-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="mobile-menu-item">
                                         <a href="#" class="mobile-menu-link">Курсы</a>
@@ -151,10 +184,10 @@
                                 <a href="lk-profile.html" class="sidebar-link">Профиль</a>
                             </li>
                             <li class="sidebar-item sidebar-item--active">
-                                <a href="lk-vacancy.html" class="sidebar-link">Вакансии</a>
+                                <a href="lk-vacancy.html" class="sidebar-link">Мои вакансии</a>
                             </li>
                             <li class="sidebar-item">
-                                <a href="lk-resume.html" class="sidebar-link">Резюме</a>
+                                <a href="lk-resume.html" class="sidebar-link">Мои резюме</a>
                             </li>
                             <li class="sidebar-item">
                                 <a href="#" class="sidebar-link">Курсы</a>
