--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,7 @@
                     </div>
                     <nav class="menu">
                         <ul class="menu-list">
-                            <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a>
-								<ul class="menu-list-child">
-									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a>
-										<ul class="menu-list-sub">
-											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-											<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-										</ul>
-									</li>
-									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-									<li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
-								</ul>
-                            </li>
+                            <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a></li>
                             <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                         </ul>
                     </nav>
@@ -52,8 +40,7 @@
                         <span id="toggle-menu" class="toggle-menu"></span>
                         <ul class="mobile-menu-list">
                             <li class="mobile-menu-item">
-                                <a href="vacancy.html" class="mobile-menu-link">Вакансии</a>
-                            </li>
+                                <a href="vacancy.html" class="mobile-menu-link">Вакансии</a></li>
                             <li class="mobile-menu-item">
                                 <a href="#" class="mobile-menu-link">Контакты</a>
                             </li>
