--- a/src/vacancy.html
+++ b/src/vacancy.html
@@ -15,7 +15,19 @@
                         </div>
                         <nav class="menu">
                             <ul class="menu-list">
-                                <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a></li>
+                                <li class="menu-item"><a href="vacancy.html" class="menu-link">Вакансии</a>
+                                    <ul class="menu-list-child">
+                                        <li class="menu-item"><a href="#" class="menu-link">Вакансии</a>
+                                            <ul class="menu-list-sub">
+                                                <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+                                                <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+                                                <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+                                            </ul>
+                                        </li>
+                                        <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+                                        <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+                                    </ul>
+                                </li>
                                 <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
                             </ul>
                         </nav>
@@ -27,46 +39,79 @@
                             </form>
                         </div>
                         <div class="header-meta box">
-                            <div class="dropdown-menu dropdown-menu--notification dropdown-menu--new">
+                            <div class="dropdown-menu dropdown-menu--wide dropdown-menu--notification dropdown-menu--new">
                                 <p class="dropdown-menu-title">Уведомления</p>
-                                <ul class="dropdown-menu-list">
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                </ul>
+                                <div class="dropdown-menu-list">
+                                    <div class="dropdown-menu-head box box-between">
+                                        <p>Уведомления</p>
+                                        <a href="#">Посмотреть все</a>
+                                    </div>
+                                    <ul class="dropdown-menu-body">
+                                        <li class="dropdown-menu-item dropdown-menu-item--new">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
-                            <div class="dropdown-menu dropdown-menu--message dropdown-menu--new">
+                            <div class="dropdown-menu dropdown-menu--wide dropdown-menu--message dropdown-menu--new">
                                 <p class="dropdown-menu-title">Сообщения</p>
-                                <ul class="dropdown-menu-list">
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                    <li class="dropdown-menu-item">
-                                        <a href="#" class="dropdown-menu-link">Lorem ipsum dolor</a>
-                                    </li>
-                                </ul>
+                                <div class="dropdown-menu-list">
+                                    <div class="dropdown-menu-head box box-between">
+                                        <p>Сообщения</p>
+                                        <a href="#">Посмотреть все</a>
+                                    </div>
+                                    <ul class="dropdown-menu-body">
+                                        <li class="dropdown-menu-item dropdown-menu-item--new">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item dropdown-menu-item--new">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                        <li class="dropdown-menu-item">
+                                            <div class="box box-center--vertical">
+                                                <div class="avatar">
+                                                    <img src="img/avatar.svg" alt="">
+                                                </div>
+                                                <div class="meta-box">
+                                                    <p class="meta-title">Екатерина Коробова</p>
+                                                    <p class="meta-small-text">16 марта 2019</p>
+                                                </div>
+                                            </div>
+                                            <a href="#" class="dropdown-menu-link">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore...</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
 
                             <div class="dropdown-menu dropdown-menu--profile">
@@ -78,10 +123,10 @@
                                         <a href="lk-profile.html" class="dropdown-menu-link">Профиль</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="lk-vacancy.html" class="dropdown-menu-link">Вакансии</a>
+                                        <a href="lk-vacancy.html" class="dropdown-menu-link">Мои вакансии</a>
                                     </li>
                                     <li class="dropdown-menu-item">
-                                        <a href="lk-resume.html" class="dropdown-menu-link">Резюме</a>
+                                        <a href="lk-resume.html" class="dropdown-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="dropdown-menu-item">
                                         <a href="#" class="dropdown-menu-link">Курсы</a>
@@ -108,12 +153,17 @@
                                 <ul class="mobile-menu-profile-list">
                                     <li class="mobile-menu-item mobile-menu-item--active">
                                         <a href="lk-profile.html" class="mobile-menu-link">Профиль</a>
+                                        <ul class="mobile-menu-list-child">
+                                            <li class="mobile-menu-item"><a href="#" class="mobile-menu-link">Личные данные</a></li>
+                                            <li class="mobile-menu-item"><a href="#" class="mobile-menu-link">Пароль</a></li>
+                                            <li class="mobile-menu-item"><a href="#" class="mobile-menu-link">Удалить учётную запись</a></li>
+                                        </ul>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="lk-vacancy.html" class="mobile-menu-link">Вакансии</a>
+                                        <a href="lk-vacancy.html" class="mobile-menu-link">Мои вакансии</a>
                                     </li>
                                     <li class="mobile-menu-item">
-                                        <a href="lk-resume.html" class="mobile-menu-link">Резюме</a>
+                                        <a href="lk-resume.html" class="mobile-menu-link">Мои резюме</a>
                                     </li>
                                     <li class="mobile-menu-item">
                                         <a href="#" class="mobile-menu-link">Курсы</a>
@@ -138,6 +188,13 @@
 
             <main class="vacancy">
                 <div class="container">
+                    <ul class="breadcrumbs">
+                        <li class="breadcrumbs-item"><a href="#">Уровень 1</a></li>
+                        <li class="breadcrumbs-item"><a href="#">Уровень 2</a></li>
+                        <li class="breadcrumbs-item"><a href="#">Уровень 3</a></li>
+                        <li class="breadcrumbs-item"><span>Уровень 4</span></li>
+                    </ul>
+
                     <h1 class="title">Вакансии по запросу «Веб-дизайнер»</h1>
                     <div class="filter-box">
                         <form action="#" class="filter-form box box-wrap">
