--- a/src/lk-vacancy.html
+++ b/src/lk-vacancy.html
@@ -213,51 +213,64 @@
                                     <div class="lk-table-th lk-table-cash">Зарплата</div>
                                     <div class="lk-table-th lk-table-update">Последнее обновление</div>
                                     <div class="lk-table-th lk-table-status">Статус</div>
-                                    <div class="lk-table-th lk-table-remove">Удалить</div>
                                 </div>
                                 <div class="lk-table-row lk-table-row-td">
-                                    <div class="lk-table-td lk-table-name"><a href="#">Программист backend на C++/C#</a></div>
+                                    <div class="lk-table-td lk-table-name">
+                                        <a href="#">Программист backend на C++/C#</a>
+                                        <ul class="lk-table-list">
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Смотреть</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Редактировать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Опубликовать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Снять с публикации</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link lk-table-link--remove">Удалить</a></li>
+                                        </ul>
+                                    </div>
                                     <div class="lk-table-td lk-table-cash">от 100 000 руб</div>
                                     <div class="lk-table-td lk-table-update">08.02.2019</div>
                                     <div class="lk-table-td lk-table-status published">Опубликовано</div>
-                                    <div class="lk-table-td lk-table-remove remove">
-                                        <button class="remove-btn">
-                                            <span class="remove-ikon">Удалить</span>
-                                        </button>
-                                    </div>
                                 </div>
                                 <div class="lk-table-row lk-table-row-td">
-                                    <div class="lk-table-td lk-table-name"><a href="#">Frontend-разработчик / Верстальщик</a></div>
+                                    <div class="lk-table-td lk-table-name"><a href="#">Frontend-разработчик / Верстальщик</a>
+                                        <ul class="lk-table-list">
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Смотреть</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Редактировать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Опубликовать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Снять с публикации</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link lk-table-link--remove">Удалить</a></li>
+                                        </ul>
+                                    </div>
                                     <div class="lk-table-td lk-table-cash">не указана</div>
                                     <div class="lk-table-td lk-table-update">08.02.2019</div>
                                     <div class="lk-table-td lk-table-status archive">В архиве</div>
-                                    <div class="lk-table-td lk-table-remove remove">
-                                        <button class="remove-btn">
-                                            <span class="remove-ikon">Удалить</span>
-                                        </button>
-                                    </div>
                                 </div>
                                 <div class="lk-table-row lk-table-row-td">
-                                    <div class="lk-table-td lk-table-name"><a href="#">Web-программист</a></div>
+                                    <div class="lk-table-td lk-table-name"><a href="#">Web-программист</a>
+                                        <ul class="lk-table-list">
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Смотреть</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Редактировать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Опубликовать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Снять с публикации</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link lk-table-link--remove">Удалить</a></li>
+                                        </ul>
+                                    </div>
                                     <div class="lk-table-td lk-table-cash">от 50 000 до 70 000 руб</div>
                                     <div class="lk-table-td lk-table-update">08.02.2019</div>
                                     <div class="lk-table-td lk-table-status published">Опубликовано</div>
-                                    <div class="lk-table-td lk-table-remove remove">
-                                        <button class="remove-btn">
-                                            <span class="remove-ikon">Удалить</span>
-                                        </button>
-                                    </div>
                                 </div>
                                 <div class="lk-table-row lk-table-row-td">
-                                    <div class="lk-table-td lk-table-name"><a href="#">Разработчик SharePoint</a></div>
+                                    <div class="lk-table-td lk-table-name">
+                                        <a href="#">Разработчик SharePoint</a>
+                                        <ul class="lk-table-list">
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Смотреть</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Редактировать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Опубликовать</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link">Снять с публикации</a></li>
+                                            <li class="lk-table-item"><a href="#" class="lk-table-link lk-table-link--remove">Удалить</a></li>
+                                        </ul>
+                                    </div>
                                     <div class="lk-table-td lk-table-cash">не указана</div>
                                     <div class="lk-table-td lk-table-update">08.02.2019</div>
                                     <div class="lk-table-td lk-table-status draft">Черновик</div>
-                                    <div class="lk-table-td lk-table-remove remove">
-                                        <button class="remove-btn">
-                                            <span class="remove-ikon">Удалить</span>
-                                        </button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
