Сообщение об успешной отправки формы

--- a/src/html/_form.html
+++ b/src/html/_form.html
@@ -46,7 +46,7 @@
     </div>
 </form>
 
-<form id="registrationForm" class="mfp-hide white-popup-block">
+<form id="registrationForm" class="mfp-hide white-popup-block send-ok">
     <div class="form-head">
         <p>Регистрация</p>
     </div>
@@ -80,5 +80,9 @@
             <p>Уже зарегистрировались?</p>
             <a href="#loginForm" class="form-link">Войти</a>
         </div>
+    </div>
+
+    <div class="send-box send-box-ok">
+        <p>Спасибо. Ваше сообщение отправлено</p>
     </div>
 </form>
